[CES-1705] Add quotes check to flake8

--- a/cfg/flake8.ini
+++ b/cfg/flake8.ini
@@ -1,5 +1,6 @@
 [flake8]
 max-line-length = 120
+inline-quotes = "
 ignore =
   # W503 line break before binary operator
   # An old rule, superseded by PEP8 update
