Apply suggestions from code review
Co-authored-by: Ruben <60101368+RKox91@users.noreply.github.com>

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,7 +2,7 @@ on:
   workflow_call:
     inputs:
       PARENT_BRANCH:
-        description: "The master/main branch of the repository to compare files againt"
+        description: "The master/main branch of the repository to compare files against"
         type: string
         required: true
           
